Fix shadow color for dark mode system preference

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -177,7 +177,7 @@ ul {
 
     --hue-accent: 90;
     --chroma-neutral: 0.02;
-    --shadow-color: 0deg 0% 58%;
+    --shadow-color: 223deg 18% 10%;
 
     --lightness-800: 95%;
     --lightness-700: 92%;
